Fix #9: Introduce setting for diagram zoom level

--- a/slides.md.html
+++ b/slides.md.html
@@ -269,7 +269,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 <link rel="stylesheet" type="text/css" href="markdeep-slides-reset.css">
 <link rel="stylesheet" type="text/css" href="markdeep-slides.css">
 <link rel="stylesheet" type="text/css" href="slides-theme-simple.css">
-<script>markdeepSlidesOptions = {aspectRatio: 16 / 9, fontSize: 28, slideNumberColor: "#bbb"}</script>
+<script>markdeepSlidesOptions = {aspectRatio: 16 / 9, fontSize: 28, slideNumberColor: "#bbb", diagramZoom: 1.0}</script>
 <script>markdeepOptions={tocStyle:'none', onLoad: function() { initSlides(); }}</script>
 <script src="markdeep-slides.js"></script>
 <style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style>
