--- a/slides.md.html
+++ b/slides.md.html
@@ -271,9 +271,9 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 
 
 <!-- Markdeep slides stuff -->
-<link rel="stylesheet" src="markdeep-slides-reset.css">
-<link rel="stylesheet" src="markdeep-slides.css">
-<link rel="stylesheet" src="markdeep-slides-theme-simple.css">
+<link rel="stylesheet" href="markdeep-slides-reset.css">
+<link rel="stylesheet" href="markdeep-slides.css">
+<link rel="stylesheet" href="markdeep-slides-theme-simple.css">
 <script>
     markdeepSlidesOptions = {
         aspectRatio: 16 / 9,
