Improve stylesheet-related stuff and add the beginnings of a serif font slide theme

--- a/slides.md.html
+++ b/slides.md.html
@@ -206,7 +206,7 @@ $$
 ### Admonitions:
 
 !!!
-    This is an admonition
+    This is an admonition.
 
 !!! error: Red admonition
     Another one, but it's red. Must be danger ahead!
@@ -273,7 +273,8 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 <!-- Markdeep slides stuff -->
 <link rel="stylesheet" href="markdeep-slides-reset.css">
 <link rel="stylesheet" href="markdeep-slides.css">
-<link rel="stylesheet" href="markdeep-slides-theme-simple.css">
+<!--<link rel="stylesheet" href="markdeep-slides-theme-simple.css">-->
+<link rel="stylesheet" href="markdeep-slides-theme-vollkorn.css">
 <script>
     markdeepSlidesOptions = {
         aspectRatio: 16 / 9,
