Get started on a dark blue theme

--- a/slides.md.html
+++ b/slides.md.html
@@ -274,7 +274,8 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 <link rel="stylesheet" href="markdeep-slides-reset.css">
 <link rel="stylesheet" href="markdeep-slides.css">
 <!--<link rel="stylesheet" href="markdeep-slides-theme-simple.css">-->
-<link rel="stylesheet" href="markdeep-slides-theme-vollkorn.css">
+<!--<link rel="stylesheet" href="markdeep-slides-theme-vollkorn.css">-->
+<link rel="stylesheet" href="markdeep-slides-theme-deepsea.css">
 <script>
     markdeepSlidesOptions = {
         aspectRatio: 16 / 9,
