Improve directory structure

--- a/demo.md.html
+++ b/demo.md.html
@@ -285,12 +285,6 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 
 
 <!-- Markdeep slides stuff -->
-<link rel="stylesheet" href="markdeep-slides-reset.css">
-<link rel="stylesheet" href="markdeep-slides.css">
-<!--<link rel="stylesheet" href="markdeep-slides-theme-simple.css">-->
-<!--<link rel="stylesheet" href="markdeep-slides-theme-serif.css">-->
-<!--<link rel="stylesheet" href="markdeep-slides-theme-deepsea.css">-->
-<link rel="stylesheet" href="markdeep-slides-theme-deepsea.css">
 <script>
     markdeepSlidesOptions = {
         aspectRatio: 16 / 9,
@@ -299,7 +293,8 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
         diagramZoom: 1.0
     };
 </script>
-<script src="markdeep-slides.js"></script>
+<link rel="stylesheet" href="markdeep-slides/markdeep-slides.css">
+<script src="markdeep-slides/markdeep-slides.js"></script>
 
 <!-- Markdeep stuff -->
 <script>markdeepOptions={tocStyle:'none', onLoad: function() { initSlides(); }}</script>
