Finally fix #5: Improve default theme, add one or more other themes and improve the way themes are set, and in the same vein fix #8: Improve styling of presenter notes in pop-out window

--- a/demo.md.html
+++ b/demo.md.html
@@ -109,7 +109,7 @@ Make sure to define your options *before* loading `markdeep-slides.js`:
 <script>
 markdeepSlidesOptions = {
     aspectRatio: 16 / 9,  // aspect ratio of your slides
-    theme: 'simple',      // theme – "simple", "vollkorn" or "deepsea"
+    theme: 'simple',      // theme – "simple", "serif" or "deepsea"
     fontSize: 28,         // base font size
     diagramZoom: 1.0      // markdeep diagram scaling factor
 };
@@ -288,7 +288,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 <script>
     markdeepSlidesOptions = {
         aspectRatio: 16 / 9,
-        theme: 'simple',
+        theme: 'deepsea',
         fontSize: 28,
         diagramZoom: 1.0
     };
