Slight improvements to the shortcuts section of the demo slides

--- a/demo.md.html
+++ b/demo.md.html
@@ -51,12 +51,12 @@ See?
 Press...
 
 * <kbd>space</kbd>, <kbd>↓</kbd>, <kbd>→</kbd> or <kbd>PgDn</kbd> to go to the next slide,
-* <kbd>↑</kbd>, <kbd>←</kbd> or <kbd>PgUp</kbd> to go to the next slide,
-* <kbd>F</kbd>, <kbd>F5</kbd> or <kbd>Esc</kbd> to enter or exit fullscreen presentation mode and
-* <kbd>.</kbd> to turn the screen black (and back again).
+* <kbd>↑</kbd>, <kbd>←</kbd> or <kbd>PgUp</kbd> to go to the previous slide,
+* <kbd>F</kbd>, <kbd>F5</kbd> or <kbd>Esc</kbd> to enter or exit fullscreen/presentation mode,
+* <kbd>.</kbd> to turn the screen black (and back again), and
 * <kbd>n</kbd> to open a window with your presenter notes (more on the next slide).
 
-These little presenter clicker thingies should work no problem.
+These little presenter gadgets should work no problem.
 
 ---
 
