--- a/demo.md.html
+++ b/demo.md.html
@@ -16,7 +16,7 @@ Noah Doersing
 
 To start building your own slides with the help of Markdeep:
 
-1. Dowload a release from https://github.com/doersino/markdeep-slides/releases *(recommended)* or clone this repository.
+1. Download a release from https://github.com/doersino/markdeep-slides/releases *(recommended)* or clone this repository.
 
     ```php
     $ git clone https://github.com/doersino/markdeep-slides
@@ -288,7 +288,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 <script>
     markdeepSlidesOptions = {
         aspectRatio: 16 / 9,
-        theme: 'deepsea',
+        theme: 'simple',
         fontSize: 28,
         diagramZoom: 1.0
     };
