Various minor adjustments

--- a/demo.md.html
+++ b/demo.md.html
@@ -18,7 +18,7 @@ To start building your own slides with the help of Markdeep:
 
 1. Clone this repository, or download a zipped version of it from https://github.com/doersino/markdeep-slides/archive/master.zip.
 
-    ```php
+    ```bash
     $ git clone https://github.com/doersino/markdeep-slides
     ```
 
@@ -30,7 +30,7 @@ To start building your own slides with the help of Markdeep:
 
 Use **horizontal lines to separate slides**:
 
-```
+```text
 slide 1
 ---
 slide 2
@@ -76,7 +76,7 @@ Press <kbd>n</kbd> to open a **window with the presenter notes** and a basic clo
 
 Presenter notes **support Markdeep** and can be **defined using three nested blockquotes**, like so:
 
-```markdown
+```text
 >>> Don't just read what's *on* the slides out loud, ya loon.
 >>> Here's some additional information:
 >>> * Cats are cute.
