Embed screenshot instead of cat in demo slides

--- a/demo.md.html
+++ b/demo.md.html
@@ -67,7 +67,7 @@ These little presenter gadgets should work no problem.
 >>>
 >>> You can use *arbitrary* Markdeep constructs in here (as long as they're allowed in blockquotes)!
 >>>
->>> ![](http://placekitten.com/400/140 style="width: 10rem")
+>>> ![](screenshot.jpg style="width: 10rem")
 
 
 ## Presenter notes
@@ -125,7 +125,7 @@ You can tweak some aspects of the themes by overriding CSS variables – take a 
 Images should always be given a width, height, or both in `rem`:
 
 ```
-![](path/to/image.jpg style="height: 12rem")
+![](screenshot.jpg style="height: 12rem")
 ```
 
 Embedded videos can receive the same parameters.
