Document the two new features

--- a/demo.md.html
+++ b/demo.md.html
@@ -50,11 +50,13 @@ See?
 
 Press...
 
-* <kbd>space</kbd>, <kbd>↓</kbd>, <kbd>→</kbd> or <kbd>PgDn</kbd> to go to the next slide,
+* <kbd>Space</kbd>, <kbd>↓</kbd>, <kbd>→</kbd> or <kbd>PgDn</kbd> to go to the next slide,
 * <kbd>↑</kbd>, <kbd>←</kbd> or <kbd>PgUp</kbd> to go to the previous slide,
 * <kbd>F</kbd>, <kbd>F5</kbd> or <kbd>Esc</kbd> to enter or exit fullscreen/presentation mode,
-* <kbd>.</kbd> to turn the screen black (and back again), and
-* <kbd>n</kbd> to open a window with your presenter notes (more on the next slide).
+* <kbd>.</kbd> to turn the screen black (and back again),
+* <kbd>n</kbd> to open a window with your presenter notes (more on the next slide),
+* <kbd>t</kbd> to start (or dismiss) a timer shown in the presenter notes window, and
+* a slide number, e.g. <kbd>1</kbd> <kbd>7</kbd>, followed by <kbd>Enter</kbd>, to jump to that slide.
 
 These little presenter gadgets should work no problem.
 
