Add an option to show or hide the presentation progress bar

--- a/demo.md.html
+++ b/demo.md.html
@@ -113,7 +113,8 @@ markdeepSlidesOptions = {
     aspectRatio: 16 / 9,  // aspect ratio of your slides
     theme: 'simple',      // theme – "simple", "serif" or "deepsea"
     fontSize: 28,         // base font size
-    diagramZoom: 1.0      // markdeep diagram scaling factor
+    diagramZoom: 1.0,     // markdeep diagram scaling factor
+    progressBar: true     // show a presentation progress bar on each slide?
 };
 </script>
 ```
@@ -293,7 +294,8 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
         aspectRatio: 16 / 9,
         theme: 'simple',
         fontSize: 28,
-        diagramZoom: 1.0
+        diagramZoom: 1.0,
+        progressBar: true
     };
 </script>
 <link rel="stylesheet" href="markdeep-slides/markdeep-slides.css">
