Fix #14: Add an option to show the total number of slides next to the slide number

--- a/demo.md.html
+++ b/demo.md.html
@@ -110,11 +110,12 @@ Make sure to define your options *before* loading `markdeep-slides.js`:
 ```
 <script>
 markdeepSlidesOptions = {
-    aspectRatio: 16 / 9,  // aspect ratio of your slides
-    theme: 'simple',      // theme – "simple", "serif" or "deepsea"
-    fontSize: 28,         // base font size
-    diagramZoom: 1.0,     // markdeep diagram scaling factor
-    progressBar: true     // show a presentation progress bar on each slide?
+    aspectRatio: 16 / 9,      // aspect ratio of your slides
+    theme: 'simple',          // theme – "simple", "serif" or "deepsea"
+    fontSize: 28,             // base font size
+    diagramZoom: 1.0,         // markdeep diagram scaling factor
+    totalSlideNumber: false,  // show total number of slides next to slide number?
+    progressBar: true         // show a presentation progress bar on each slide?
 };
 </script>
 ```
@@ -295,6 +296,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
         theme: 'simple',
         fontSize: 28,
         diagramZoom: 1.0,
+        totalSlideNumber: false,
         progressBar: true
     };
 </script>
