--- a/demo.md.html
+++ b/demo.md.html
@@ -79,9 +79,9 @@ Press <kbd>n</kbd> to open a **window with the presenter notes** and a basic clo
 Presenter notes **support Markdeep** and can be **defined using three nested blockquotes**, like so:
 
 ```text
->>> Don't just read what's *on* the slides out loud, ya loon.
+>>> Don't just read what's *on* the slides out loud, that's boring.
 >>> Here's some additional information:
->>> * Cats are cute.
+>>> * A monad is just a monoid in the category of endofunctors.
 ```
 
 In draft mode, presenter notes are shown below each slide.
@@ -120,7 +120,7 @@ markdeepSlidesOptions = {
 </script>
 ```
 
-You can tweak some aspects of the themes by overriding CSS variables – take a look at their CSS files.
+You can tweak the themes via CSS variables – take a look at their CSS files.
 
 ---
 
