Enable theme option to refer to arbitrary CSS files instead of just the three predefined themes

--- a/demo.md.html
+++ b/demo.md.html
@@ -111,7 +111,7 @@ Make sure to define your options *before* loading `markdeep-slides.js`:
 <script>
 markdeepSlidesOptions = {
     aspectRatio: 16 / 9,      // aspect ratio of your slides
-    theme: 'simple',          // theme – "simple", "deepsea" or "serif"
+    theme: 'simple',          // theme – "simple", "deepsea", "serif" or path of a stylesheet
     fontSize: 28,             // base font size, relative to slide display size
     diagramZoom: 1.0,         // markdeep diagram scaling factor
     totalSlideNumber: false,  // show total number of slides next to slide number?
