--- a/demo.md.html
+++ b/demo.md.html
@@ -3,7 +3,7 @@
 **Building presentation slides with markdeep**
     Acrobat Reader? I hardly know her!
 
-<small><em>June 16, 2019</em></small><br>
+<small><em><script>document.write(new Date().toLocaleDateString('en-US', {year: 'numeric', month: 'long', day: 'numeric'}));</script></em></small><br>
 Noah Doersing
 
 ---
