Link to diagram examples in demo presentation

--- a/demo.md.html
+++ b/demo.md.html
@@ -192,7 +192,7 @@ $$
 *                       '--------------'                                  *
 ***************************************************************************
 
-Take a look at the Markdeep docs for more example diagrams.
+Take a look at the [Markdeep docs](https://casual-effects.com/markdeep/features.md.html#basicformatting/diagrams) for more example diagrams.
 
 ---
 
